syntax = "proto3";

option go_package = "github.com/sters/onstatic/pluginapi";

package plugin;

service OnstaticPlugin {
  rpc Name(EmptyMessage) returns (NameResponse) {}
  rpc Start(EmptyMessage) returns (EmptyMessage) {}
  rpc Stop(EmptyMessage) returns (EmptyMessage) {}
  rpc Handle(HandleRequest) returns (HandleResponse) {}
}

message EmptyMessage {}

message NameResponse {
  string name = 1;
}

message Header {
  string key = 1;
  repeated string value = 2;
}

message HandleRequest {
  string path = 1;
  repeated Header header = 2;
  string body = 3;
}

message HandleResponse{
  repeated Header header = 1;
  string body = 2;
}
